# BindingAffinity

./: .dockerignore  .env  .gitattributes  .gitignore  Dockerfile  GNNs__practice.ipynb  LICENSE  README.md  README_new.md  all_inferences.py  dataset.py  docker-compose.yml  inference.py  main.py  model.py  model_attention.py  model_pl.py  optuna_train.py  optuna_train_attention.py  pdbbind_general_dataset.csv  pdbbind_refined_dataset.csv  pyproject.toml  requirements.txt  train.py  train_attention.py  train_pl.py  utils.py  visualization.ipynb
GNN_classification/: Dataset_Preparation.py  model.py  training.py
GNN_classification/dataset/classification/: EDA.ipynb  data_test.csv
frontend/: app.py
frontend/templates/: ngl_view.html
models/: model_ep028_weighted_loss6.7715.pth  model_ep041_attention_mse1.9153.pth
notebooks/: EDA.ipynb  visualization.ipynb
pinns_practice/: basic_pinn.py
research/: EDA.ipynb  all_inferences.py  dataset_preparation.py  inference.py  inference_attention.py  loss.py  model.py  model_attention.py  model_pl.py  optuna_train.py  optuna_train_attention.py  print-mass.py  print_attention_atoms.py  requirements_dev.txt  train.py  train_attention.py  visualization.ipynb
research/GNN_classification/: model.py  training.py
research/gnn_gnn_experiment/: dataset_3d.py  dataset_gnn.py  dataset_sota.py  model_gnn.py  model_sota.py  train_3d.py  train_gnn.py  train_sota.py
static/css/: styles.css
templates/: index.html  ngl_view.html
training/scripts/: extract_pockets.py  fix_csv.py  merge_datasets.py  prepare_esm_cache.py  prepare_general_csv.py  prepare_ligand_cache.py  prepare_pocket_graphs.py  prepare_true_ligand_graphs.py  train_3d_colab.py
training/src/: dataset.py  utils.py
training/src/models/: model_3d.py
transformer_from_scratch/: attention_visual.ipynb  config.py  dataset.py  inference.ipynb  model.py  train.py  translate.py
(+2 files in other folders)
